회원가입 중복 체크 리스트 작성

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,12 @@
             android:hint="Input Password"
             android:inputType="textPassword" />
 
+        <CheckBox
+            android:id="@+id/autoLoginCb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Auto Login"/>
+
         <Button
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
