BaseFragment.kt 작성 -retrofit, mContext init 진행

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,17 @@
         tools:context=".ui.main.MainActivity">
 
 
-        <Button
-            android:id="@+id/logOutBtn"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/mainViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Log Out"/>
-
+            app:menu="@menu/bottom_nav_menu"/>
     </LinearLayout>
 
 </layout>
