ViewPager2+TabLayout 연결
친구목록 누르는순간 앱꺼짐현상
해결->MyfriendsListFragment에서
바인딩연결 제대로 해주니 해결됨

--- a/app/src/main/res/layout/activity_my_friends.xml
+++ b/app/src/main/res/layout/activity_my_friends.xml
@@ -11,6 +11,7 @@
         tools:context=".ui.settings.MyFriendsActivity">
 
         <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
