--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -8,7 +8,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="10dp">
-
+//push test
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImg"
