--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -39,7 +39,7 @@
                     android:src="@mipmap/ic_launcher" />
 
                 <TextView
-                    android:id="@+id/nickNameTxt"
+                    android:id="@+id/nicknameTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Nick Name" />
